# onsetbot

./: .gitignore  README.md  package.xml  setup.cfg  setup.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/odrive_botwheel_explorer/share/odrive_botwheel_explorer/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/odrive_can/lib/odrive_can/: odrive_can_node
install/odrive_can/share/odrive_can/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/odrive_can/share/odrive_can/cmake/: ament_cmake_export_dependencies-extras.cmake  export_odrive_can__rosidl_generator_cExport.cmake  export_odrive_can__rosidl_generator_cppExport.cmake  export_odrive_can__rosidl_generator_pyExport.cmake  export_odrive_can__rosidl_typesupport_fastrtps_cExport.cmake  odrive_canConfig.cmake  (+1 more)
install/odrive_ros2_control/share/odrive_ros2_control/: package.sh
install/onset_interfaces/share/onset_interfaces/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/onsetbot/lib/onsetbot/: actuator_command  odrive_can_bridge  onset_gui  stm32_bridge  velocity_commander  zero_sequence
install/onsetbot/share/onsetbot/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
odrive_tools/: vel_commander.py  zero_sequence.py
odrive_tools/log/: latest_build
src/onset_interfaces/: CMakeLists.txt
src/onset_interfaces/msg/: LaunchCommand.msg  OnsetStatus.msg  STM32State.msg
(+115 files in other folders)
